--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Applications/Email/Inbox.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Applications/Email/Inbox.razor
@@ -54,9 +54,7 @@
         <div class="d-flex flex-row">
             <MudCheckBox T="bool" />
             <div class="ml-6">
-                <MudText Typo="Typo.subtitle1">[Garderoben/MudBlazor] Final release!</MudText>
-                <MudText Typo="Typo.subtitle2">Jonny Larsson@Github</MudText>
-                <MudText Typo="Typo.body2">No more MudBlazor updates, development has met a screeching halt!</MudText>
+                <MudText Typo="Typo.subtitle2">MohammadJavadTabari@Github</MudText>
             </div>
         </div>
     </MudListItem>
