--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Account.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Account.razor
@@ -146,7 +146,7 @@
 </MudTabs>
 
 @code {
-    public string AvatarImageLink { get; set; } = "images/avatar_jonny.jpg";
+    public string AvatarImageLink { get; set; } = "images/MohammadJavadTabari1024.jpeg";
     public string AvatarIcon { get; set; }
     public string AvatarButtonText { get; set; } = "Delete Picture";
     public Color AvatarButtonColor { get; set; } = Color.Error;
