--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/PersonCard.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/PersonCard.razor
@@ -1,11 +1,11 @@
 ﻿<MudCard Elevation="0" Square="true" Class="@Class" Style="@Style">
     <MudCardHeader>
         <CardHeaderAvatar>
-            <MudAvatar Image="images/avatar_jonny.jpg" />
+            <MudAvatar Image="images/MohammadJavadTabari1024.jpeg" />
         </CardHeaderAvatar>
         <CardHeaderContent>
-            <MudText Typo="Typo.body2">Jonny Larsson</MudText>
-            <MudText Typo="Typo.caption">IT Consultant</MudText>
+            <MudText Typo="Typo.body2">Illegible</MudText>
+            <MudText Typo="Typo.caption">Addicted To Coding </MudText>
         </CardHeaderContent>
     </MudCardHeader>
 </MudCard>
