--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/LoginLayout.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/LoginLayout.razor
@@ -4,16 +4,18 @@
 <MudThemeProvider Theme="_currentTheme" />
 <MudSnackbarProvider />
 
-<MudContainer MaxWidth="MaxWidth.Small" Class="d-flex align-center" Style="height: 100vh;">
-    <div class="d-flex flex-column mud-width-full">
-        <MudPaper Elevation="25" Class="pa-8" Width="100%" MaxWidth="500px">
-            <MudIcon Icon="fas fa-hand-holding-usd" Color="Color.Info" Size="Size.Large"  Style="width:100px; height:100px;" />
-            @Body
-        </MudPaper>
-        <MudAlert Severity="Severity.Info" Class="mt-8 mud-width-full" Style="max-width:500px;" >No authentication is required, click sign in.</MudAlert>
-    </div>
-</MudContainer>
+<div style="background-color : black">
+    <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex align-center" Style="height: 100vh;">
+        <div class="d-flex flex-column mud-width-full">
+            <MudPaper Elevation="25" Class="pa-8" Width="100%" MaxWidth="500px">
+                <MudIcon Icon="fas fa-hand-holding-usd" Color="Color.Info" Size="Size.Large" Style="width:100px; height:100px;" />
+                @Body
+            </MudPaper>
+            <MudAlert Severity="Severity.Info" Class="mt-8 mud-width-full" Style="max-width:500px;">No authentication is required, click sign in.</MudAlert>
+        </div>
+    </MudContainer>
 
+</div>
 @code {
     private MudTheme _currentTheme = new MudBlazorAdminDashboard();
 }
