--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
@@ -1,178 +1,87 @@
 ﻿@page "/personal/dashboard"
 
-<MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Dashboard</MudText>
+<MudText Typo="Typo.h5" Align="Align.Center" Color="Color.Primary" Class="mb-4">Hmoe Panel</MudText>
 <MudGrid>
-    <MudItem xs="12" sm="6" md="3">
-        <MudPaper Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
-            <MudIcon Icon="@Icons.Material.Filled.Euro" Color="Color.Primary" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
-            <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Total Cost</MudText>
-                <MudText Typo="Typo.h5">3,125,000</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem xs="12" sm="6" md="3">
-        <MudPaper Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
-            <MudIcon Icon="@Icons.Material.Filled.Layers" Color="Color.Secondary" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
-            <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Graphite on roof</MudText>
-                <MudText Typo="Typo.h5">150,000</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem xs="12" sm="6" md="3">
-        <MudPaper Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
-            <MudIcon Icon="@Icons.Material.Filled.Public" Color="Color.Success" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
-            <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Global Spread</MudText>
-                <MudText Typo="Typo.h5">12%</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem xs="12" sm="6" md="3">
-        <MudPaper Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
-            <MudIcon Icon="@Icons.Custom.Uncategorized.Radioactive" Color="Color.Warning" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
-            <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Roentgen</MudText>
-                <MudText Typo="Typo.h5">3,6</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem xs="12" sm="8">
-        <MudPaper Class="pa-4">
-            <div class="row">
-                <div class="col-5">
-                    <MudText>name</MudText>
-                    <MudText>name</MudText>
+    <MudItem xs="2" sm="2" md="2">
+        <MudPaper Class="py-4 px-6 mx-4 rounded-t-xl" Style="border-right:4px solid #7922d6">
+            <div class=row>
+                <div class="col-6">
+                    <MudText Typo="Typo.body1">کل کاربران</MudText>
+                    <MudText Align="Align.Center" Typo="Typo.h5">2541</MudText>
                 </div>
-                <div class="col-5">
-                    <MudText>name</MudText>
-                    <MudText>name</MudText>
-                </div>
-                <div class="col-2">
-                    <MudAvatar >
-
-                    </MudAvatar>
+                <div class="col-1" style="border-left:1px solid black"></div>
+                <div class="col-4">
+                    <MudIcon Icon="fa fa-users" Size="Size.Large" Style="text-align:center" Color="Color.Secondary"></MudIcon>
                 </div>
             </div>
-            <MudExpansionPanels>
-                <MudExpansionPanel Text="Click Here For More Detail" Icon="fas fa-chevron-circle-down">
-                    <div class="row">
-                        <div class="col-5">
-                            <MudText>name</MudText>
-                            <MudText>name</MudText>
-                        </div>
-                        <div class="col-5">
-                            <MudText>name</MudText>
-                            <MudText>name</MudText>
-                        </div>
-                    </div>
-                </MudExpansionPanel>
-            </MudExpansionPanels>
         </MudPaper>
     </MudItem>
-    <MudItem xs="12" sm="4">
-        <MudPaper Class="pa-4" Style="height:300px;">
-            Charts comming soon ish...
+    <MudItem xs="2" sm="2" md="2">
+        <MudPaper Class="py-4 px-6 mx-4 rounded-t-xl" Style="border-right:4px solid #0045f5">
+            <div class=row>
+                <div class="col-6">
+                    <MudText Typo="Typo.body1">کاربران فعال</MudText>
+                    <MudText Align="Align.Center" Typo="Typo.h5">1973</MudText>
+                </div>
+                <div class="col-1" style="border-left:1px solid black"></div>
+                <div class="col-4">
+                    <MudIcon Icon="fa fa-vcard" Size="Size.Large" Style="text-align:center" Color="Color.Primary"></MudIcon>
+                </div>
+            </div>
         </MudPaper>
     </MudItem>
-    <MudItem xs="12" sm="12" md="6">
-        <MudCard Style="height:100%;">
-            <MudCardHeader>
-                <CardHeaderContent>
-                    <MudText Typo="Typo.h6">Earning Report</MudText>
-                </CardHeaderContent>
-            </MudCardHeader>
-            <MudCardContent Class="px-0">
-                <MudSimpleTable Elevation="0" Hover="true">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Priority</th>
-                            <th>Earnings</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var report in earningReports.OrderBy(x => x.Name))
-                        {
-                            <tr>
-                                <td>
-                                    <div class="d-flex flex-row">
-                                        <MudAvatar Image="@report.Avatar" Class="mud-elevation-25" />
-                                        <div class="ml-6">
-                                            <MudText Typo="Typo.subtitle2">@report.Name</MudText>
-                                            <MudText Typo="Typo.body2">@report.Title</MudText>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td><MudChip Label="true" Color="@report.Severity" Size="Size.Small" Class="ml-auto mud-elevation-25">@report.SeverityTitle</MudChip></td>
-                                <td><MudText>@report.Salary</MudText></td>
-                            </tr>
-                        }
-                    </tbody>
-                </MudSimpleTable>
-            </MudCardContent>
-        </MudCard>
+    <MudItem xs="2" sm="2" md="2">
+        <MudPaper Class="py-4 px-6 mx-4 rounded-t-xl" Style="border-right:4px solid #1bf726">
+            <div class=row>
+                <div class="col-6">
+                    <MudText Typo="Typo.body1" Align="Align.Center">کاربران آنلاین</MudText>
+                    <MudText Align="Align.Center" Typo="Typo.h5">632</MudText>
+                </div>
+                <div class="col-1" style="border-left:1px solid black"></div>
+                <div class="col-4">
+                    <MudIcon Icon="fas fa-wifi" Size="Size.Large" Style="text-align:center" Color="Color.Success"></MudIcon>
+                </div>
+            </div>
+        </MudPaper>
     </MudItem>
-    <MudItem xs="12" sm="12" md="6">
-        <MudCard Style="height:100%;">
-            <MudCardHeader>
-                <CardHeaderContent>
-                    <MudText Typo="Typo.h6">Recent incidents</MudText>
-                </CardHeaderContent>
-            </MudCardHeader>
-            <MudCardContent Class="px-0">
-                <MudList Clickable="true">
-                    <MudListItem>
-                        <div class="d-flex flex-row">
-                            <MudAvatar Class="mud-elevation-25">
-                                <MudIcon Icon="@Icons.Custom.Brands.GitHub" Class="mx-4" />
-                            </MudAvatar>
-                            <div class="ml-6">
-                                <MudText Typo="Typo.subtitle2">Issues rising</MudText>
-                                <MudText Typo="Typo.body2">Issues is almost reaching 100</MudText>
-                            </div>
-                            <MudChip Label="true" Color="Color.Error" Size="Size.Small" Class="ml-auto mud-elevation-25">Danger</MudChip>
-                        </div>
-                    </MudListItem>
-                    <MudListItem>
-                        <div class="d-flex flex-row">
-                            <MudAvatar Class="mud-elevation-25">
-                                <MudIcon Icon="@Icons.Custom.Uncategorized.Radioactive" Class="mx-4" />
-                            </MudAvatar>
-                            <div class="ml-6">
-                                <MudText Typo="Typo.subtitle2">Incident in plant number 4</MudText>
-                                <MudText Typo="Typo.body2">Fire in reactor core</MudText>
-                            </div>
-                            <MudChip Label="true" Color="Color.Info" Size="Size.Small" Class="ml-auto mud-elevation-25">Minor</MudChip>
-                        </div>
-                    </MudListItem>
-                    <MudListItem>
-                        <div class="d-flex flex-row">
-                            <MudAvatar Class="mud-elevation-25">
-                                <MudIcon Icon="@Icons.Material.Filled.Person" Class="mx-4" />
-                            </MudAvatar>
-                            <div class="ml-6">
-                                <MudText Typo="Typo.subtitle2">Occupational injury</MudText>
-                                <MudText Typo="Typo.body2">Employee broke a finger while writing some code</MudText>
-                            </div>
-                            <MudChip Label="true" Color="Color.Success" Size="Size.Small" Class="ml-auto mud-elevation-25">Dismissed</MudChip>
-                        </div>
-                    </MudListItem>
-                </MudList>
-            </MudCardContent>
-        </MudCard>
+    <MudItem xs="2" sm="2" md="2">
+        <MudPaper Class="py-4 px-6 mx-4 rounded-t-xl" Style="border-right:4px solid orange">
+            <div class=row>
+                <div class="col-6">
+                    <MudText Typo="Typo.body1" Align="Align.Center">آماده فعالسازی</MudText>
+                    <MudText Align="Align.Center" Typo="Typo.h5">632</MudText>
+                </div>
+                <div class="col-1" style="border-left:1px solid black"></div>
+                <div class="col-4">
+                    <MudIcon Icon="fas fa-user-times" Size="Size.Large" Style="text-align:center" Color="Color.Warning"></MudIcon>
+                </div>
+            </div>
+        </MudPaper>
+    </MudItem>
+    <MudItem xs="3" sm="3" md="3">
+        <MudPaper Class="py-4 px-6 mx-4 rounded-t-xl" Style="border-right:4px solid red">
+            <div class=row>
+                <div class="col-6">
+                    <MudText Typo="Typo.body1" Align="Align.Center">افراد دعوت شده</MudText>
+                    <MudText Align="Align.Center" Typo="Typo.h5">632</MudText>
+                </div>
+                <div class="col-1" style="border-left:1px solid black"></div>
+                <div class="col-4">
+                    <MudIcon Icon="fas fa-envelope-open-text" Size="Size.Large" Style="text-align:center" Color="Color.Error"></MudIcon>
+                </div>
+            </div>
+        </MudPaper>
     </MudItem>
 </MudGrid>
 
 @code {
 
     EarningReport[] earningReports = new EarningReport[]
-                {
+                            {
         new EarningReport { Name = "Lunees", Title = "Reactor Engineer", Avatar = "https://avatars2.githubusercontent.com/u/71094850?s=460&u=66c16f5bb7d27dc751f6759a82a3a070c8c7fe4b&v=4", Salary = "$0.99", Severity = Color.Success, SeverityTitle = "Low"},
         new EarningReport { Name = "Mikes-gh", Title = "Developer", Avatar = "https://avatars.githubusercontent.com/u/16208742?s=120&v=4", Salary = "$19.12K", Severity = Color.Secondary, SeverityTitle = "Medium"},
         new EarningReport { Name = "Garderoben", Title = "CSS Magician", Avatar = "https://avatars2.githubusercontent.com/u/10367109?s=460&amp;u=2abf95f9e01132e8e2915def42895ffe99c5d2c6&amp;v=4", Salary = "$1337", Severity = Color.Primary, SeverityTitle = "High"},
-                };
+                            };
 
     class EarningReport
     {
