--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/MainLayout.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/MainLayout.razor
@@ -21,6 +21,9 @@
             <MudSpacer />
             <MudIconButton Icon="@RTLICon" OnClick="ChangeRTL" Color="Color.Error"></MudIconButton>
             <MudIconButton Icon="@ModeIcon" OnClick="ChangeMode" Color="Color.Error"></MudIconButton>
+            <MudSpacer />
+            <MudTextField Class="m-2" AdornmentIcon="@Icons.Filled.Brush" T="string" Adornment="Adornment.End" Immediate="true" Variant="Variant.Outlined" />
+            <MudSpacer />
             <MudMenu Icon="@Icons.Material.Outlined.Translate" Color="Color.Inherit" Direction="Direction.Bottom" OffsetY="true" Dense="true">
                 <MudMenuItem>English</MudMenuItem>
                 <MudMenuItem>Swedish</MudMenuItem>
