--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
@@ -291,31 +291,31 @@
                     <TitleContent>
                         <div class="row">
                             <div class="col-1">
-                                <MudAvatar Size="Size.Large" Image="https://avatars2.githubusercontent.com/u/71094850?s=460&u=66c16f5bb7d27dc751f6759a82a3a070c8c7fe4b&v=4"></MudAvatar>
+                                <MudAvatar Size="Size.Large" Image="https://avatars2.githubusercontent.com/u/10367109?s=460&amp;u=2abf95f9e01132e8e2915def42895ffe99c5d2c6&amp;v=4"></MudAvatar>
                             </div>
                             <MudSpacer />
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            سیما جمالزاده
+                                            مبینا زیاری
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            +989192651357
+                                            +989016559567
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            sima Jamal zadeh
+                                            Mobina
                                         </MudText>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel ID: 235851621
+                                            Tel ID: 359468540
                                         </MudText>
                                     </div>
                                     <div class="col-4">
@@ -354,6 +354,7 @@
             </MudExpansionPanels>
         </MudPaper>
     </MudItem>
+
     <MudItem xs="12" sm="12" md="12" Class="mt-2">
         <MudPaper>
             <MudExpansionPanels>
@@ -361,41 +362,41 @@
                     <TitleContent>
                         <div class="row">
                             <div class="col-1">
-                                <MudAvatar Size="Size.Large" Image="https://avatars2.githubusercontent.com/u/71094850?s=460&u=66c16f5bb7d27dc751f6759a82a3a070c8c7fe4b&v=4"></MudAvatar>
+                                <MudAvatar Size="Size.Large" Image="https://avatars.githubusercontent.com/u/16208742?s=120&v=4"></MudAvatar>
                             </div>
                             <MudSpacer />
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            سیما جمالزاده
+                                            سمانه موحدپور
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            +989192651357
+                                            +989122315776
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            sima Jamal zadeh
+                                            samaneh
                                         </MudText>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel ID: 235851621
+                                            Tel ID: 102645818
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Token: 1022753002
+                                            Token: 
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel: sima_J23
+                                            Tel: smn_movahed
                                         </MudText>
                                     </div>
                                 </div>
@@ -404,10 +405,10 @@
                             <div class="col-1">
                                 <div class="row">
                                     <div class="col-4">
-                                        <MudIcon Icon="fas fa-check-circle" Size="Size.Large" Color="Color.Success"></MudIcon>
+                                        <MudIcon Icon="fas fa-check-circle" Size="Size.Large" Color="Color.Error"></MudIcon>
                                     </div>
                                     <div class="col-4">
-                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Success"></MudIcon>
+                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Error"></MudIcon>
                                     </div>
                                 </div>
                             </div>
