--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/MainLayout.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/MainLayout.razor
@@ -22,7 +22,7 @@
             <MudIconButton Icon="@RTLICon" OnClick="ChangeRTL" Color="Color.Error"></MudIconButton>
             <MudIconButton Icon="@ModeIcon" OnClick="ChangeMode" Color="Color.Error"></MudIconButton>
             <MudSpacer />
-            <MudTextField Class="m-2" AdornmentIcon="@Icons.Filled.Brush" T="string" Adornment="Adornment.End" Immediate="true" Variant="Variant.Outlined" />
+            <MudTextField Class="m-2" AdornmentIcon="fas fa-search-dollar" T="string" Adornment="Adornment.End" Immediate="true" Variant="Variant.Filled" AdornmentColor="Color.Error" />
             <MudSpacer />
             <MudMenu Icon="@Icons.Material.Outlined.Translate" Color="Color.Inherit" Direction="Direction.Bottom" OffsetY="true" Dense="true">
                 <MudMenuItem>English</MudMenuItem>
