--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Applications/Chat/ChatChannels.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Applications/Chat/ChatChannels.razor
@@ -6,20 +6,20 @@
             <MudListItem Dense="true"># breaking-changes</MudListItem>
         </NestedList>
     </MudListItem>
-    <MudListItem Text="Mudblazor" InitiallyExpanded="true" Dense="true" Class="mt-4">
+    <MudListItem Text="Illegible Mud blazor" InitiallyExpanded="false" Dense="true" Class="mt-4">
         <NestedList>
             <MudListItem Dense="true" Style="font-weight:500;"># chat</MudListItem>
             <MudListItem Dense="true"># help</MudListItem>
             <MudListItem Dense="true"># development</MudListItem>
         </NestedList>
     </MudListItem>
-    <MudListItem Text="Contributors" InitiallyExpanded="true" Dense="true" Class="mt-4">
+    <MudListItem Text="Contributors" InitiallyExpanded="false" Dense="true" Class="mt-4">
         <NestedList>
             <MudListItem Dense="true"># contributors-info</MudListItem>
             <MudListItem Dense="true"># contributors-chat</MudListItem>
         </NestedList>
     </MudListItem>
-    <MudListItem Text="Core Team" InitiallyExpanded="true" Dense="true" Class="mt-4">
+    <MudListItem Text="Core Team" InitiallyExpanded="false" Dense="true" Class="mt-4">
         <NestedList>
             <MudListItem Dense="true"># core-team-info</MudListItem>
             <MudListItem Dense="true"># core-team-chat</MudListItem>
