--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
@@ -144,7 +144,7 @@
             </MudExpansionPanels>
         </MudPaper>
     </MudItem>
-    <MudItem xs="12" sm="12" md="12" Class="mt-2">
+        <MudItem xs="12" sm="12" md="12" Class="mt-2">
         <MudPaper>
             <MudExpansionPanels>
                 <MudExpansionPanel Class="IBorder1">
@@ -158,34 +158,34 @@
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            سیما جمالزاده
+                                            نیما پور صمدی
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            +989192651357
+                                            +989381945604
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            sima Jamal zadeh
+                                            Nima PourSamadi
                                         </MudText>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel ID: 235851621
+                                            Tel ID: 168459640
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Token: 1022753002
+                                            Token: 1027946589
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel: sima_J23
+                                            Tel: nima_ps
                                         </MudText>
                                     </div>
                                 </div>
@@ -197,7 +197,7 @@
                                         <MudIcon Icon="fas fa-check-circle" Size="Size.Large" Color="Color.Success"></MudIcon>
                                     </div>
                                     <div class="col-4">
-                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Success"></MudIcon>
+                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Error"></MudIcon>
                                     </div>
                                 </div>
                             </div>
@@ -228,34 +228,34 @@
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            سیما جمالزاده
+                                            محمد کریمی فخر
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            +989192651357
+                                            +989193215467
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h5">
-                                            sima Jamal zadeh
+                                            Mohammad karimi
                                         </MudText>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel ID: 235851621
+                                            Tel ID: 156849657
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Token: 1022753002
+                                            Token: 2058467512
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel: sima_J23
+                                            Tel: karimi_fakhr1100
                                         </MudText>
                                     </div>
                                 </div>
@@ -264,10 +264,80 @@
                             <div class="col-1">
                                 <div class="row">
                                     <div class="col-4">
-                                        <MudIcon Icon="fas fa-check-circle" Size="Size.Large" Color="Color.Success"></MudIcon>
+                                        <MudIcon Icon="fas fa-check-circle" Size="Size.Large" Color="Color.Error"></MudIcon>
                                     </div>
                                     <div class="col-4">
-                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Success"></MudIcon>
+                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Error"></MudIcon>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex mt-2">
+                            <MudText Class="mt-1"> Click Here To See More User Details</MudText>
+                            <MudIcon Icon="@Icons.Material.Filled.PersonPin" Color="Color.Secondary" />
+                        </div>
+                    </TitleContent>
+                    <ChildContent>
+                        Panel Content
+                    </ChildContent>
+                </MudExpansionPanel>
+            </MudExpansionPanels>
+        </MudPaper>
+    </MudItem>
+    <MudItem xs="12" sm="12" md="12" Class="mt-2">
+        <MudPaper>
+            <MudExpansionPanels>
+                <MudExpansionPanel Class="IBorder1">
+                    <TitleContent>
+                        <div class="row">
+                            <div class="col-1">
+                                <MudAvatar Size="Size.Large" Image="https://avatars.githubusercontent.com/u/12973684?s=460&u=ea557f04c5d9c54f902f8c700292baefe59217d0&v=4"></MudAvatar>
+                            </div>
+                            <MudSpacer />
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <MudText Typo="Typo.h5">
+                                            _
+                                        </MudText>
+                                    </div>
+                                    <div class="col-4">
+                                        <MudText Typo="Typo.h5">
+                                            _
+                                        </MudText>
+                                    </div>
+                                    <div class="col-4">
+                                        <MudText Typo="Typo.h5">
+                                            Amir Afzali
+                                        </MudText>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-4">
+                                        <MudText Typo="Typo.h6">
+                                            Tel ID: 621458765
+                                        </MudText>
+                                    </div>
+                                    <div class="col-4">
+                                        <MudText Typo="Typo.h6">
+                                            Token: _
+                                        </MudText>
+                                    </div>
+                                    <div class="col-4">
+                                        <MudText Typo="Typo.h6">
+                                            Tel: _
+                                        </MudText>
+                                    </div>
+                                </div>
+                            </div>
+                            <MudSpacer />
+                            <div class="col-1">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <MudIcon Icon="fas fa-check-circle" Size="Size.Large" Color="Color.Error"></MudIcon>
+                                    </div>
+                                    <div class="col-4">
+                                        <MudIcon Icon="fas fa-wifi" Size="Size.Large" Color="Color.Error"></MudIcon>
                                     </div>
                                 </div>
                             </div>
@@ -320,12 +390,12 @@
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Token: 1022753002
+                                            Token: 3021002955
                                         </MudText>
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Tel: sima_J23
+                                            Tel: _
                                         </MudText>
                                     </div>
                                 </div>
@@ -354,7 +424,6 @@
             </MudExpansionPanels>
         </MudPaper>
     </MudItem>
-
     <MudItem xs="12" sm="12" md="12" Class="mt-2">
         <MudPaper>
             <MudExpansionPanels>
@@ -391,7 +460,7 @@
                                     </div>
                                     <div class="col-4">
                                         <MudText Typo="Typo.h6">
-                                            Token: 
+                                            Token : _
                                         </MudText>
                                     </div>
                                     <div class="col-4">
@@ -426,22 +495,3 @@
         </MudPaper>
     </MudItem>
 </MudGrid>
-@code {
-
-    EarningReport[] earningReports = new EarningReport[]
-                                                                                        {
-        new EarningReport { Name = "Lunees", Title = "Reactor Engineer", Avatar = "https://avatars2.githubusercontent.com/u/71094850?s=460&u=66c16f5bb7d27dc751f6759a82a3a070c8c7fe4b&v=4", Salary = "$0.99", Severity = Color.Success, SeverityTitle = "Low"},
-        new EarningReport { Name = "Mikes-gh", Title = "Developer", Avatar = "https://avatars.githubusercontent.com/u/16208742?s=120&v=4", Salary = "$19.12K", Severity = Color.Secondary, SeverityTitle = "Medium"},
-        new EarningReport { Name = "Garderoben", Title = "CSS Magician", Avatar = "https://avatars2.githubusercontent.com/u/10367109?s=460&amp;u=2abf95f9e01132e8e2915def42895ffe99c5d2c6&amp;v=4", Salary = "$1337", Severity = Color.Primary, SeverityTitle = "High"},
-                                                                                        };
-
-    class EarningReport
-    {
-        public string Avatar;
-        public string Name;
-        public string Title;
-        public Color Severity;
-        public string SeverityTitle;
-        public string Salary;
-    }
-}
