booom .moltafet pare minamayad

--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Pages/Personal/Dashboard.razor
@@ -1,4 +1,5 @@
 ﻿@page "/personal/dashboard"
+<MudText Typo="Typo.h5" Color="Color.Dark" Class="mb-4" Align="Align.Center">Home Page</MudText>
 
 <MudGrid>
     <MudItem xs="2" sm="2" md="2">
@@ -81,7 +82,7 @@
                     <TitleContent>
                         <div class="row">
                             <div class="col-1">
-                                <MudAvatar Size="Size.Large" Image="https://avatars2.githubusercontent.com/u/71094850?s=460&u=66c16f5bb7d27dc751f6759a82a3a070c8c7fe4b&v=4"></MudAvatar>
+                                <MudAvatar Size="Size.Large" Image="https://avatars.githubusercontent.com/u/4773183?s=460&u=7d0ebb28e29ae5103a74070471ffd506cdbf03fd&v=4"></MudAvatar>
                             </div>
                             <MudSpacer />
                             <div class="col-6">
@@ -138,20 +139,25 @@
                         </div>
                     </TitleContent>
                     <ChildContent>
-                        Panel Content
+                        Mud Blazor
+                        <br />
+                        Sample Template
+                        <br />
+                        Created By Illegible
+                        <br />
                     </ChildContent>
                 </MudExpansionPanel>
             </MudExpansionPanels>
         </MudPaper>
     </MudItem>
-        <MudItem xs="12" sm="12" md="12" Class="mt-2">
+    <MudItem xs="12" sm="12" md="12" Class="mt-2">
         <MudPaper>
             <MudExpansionPanels>
                 <MudExpansionPanel Class="IBorder1">
                     <TitleContent>
                         <div class="row">
                             <div class="col-1">
-                                <MudAvatar Size="Size.Large" Image="https://avatars2.githubusercontent.com/u/71094850?s=460&u=66c16f5bb7d27dc751f6759a82a3a070c8c7fe4b&v=4"></MudAvatar>
+                                <MudAvatar Size="Size.Large" Image="https://avatars.githubusercontent.com/u/10701249?s=460&u=f806998af6e29fd4402736ba2efc2649adae9e39&v=4"></MudAvatar>
                             </div>
                             <MudSpacer />
                             <div class="col-6">
@@ -208,7 +214,12 @@
                         </div>
                     </TitleContent>
                     <ChildContent>
-                        Panel Content
+                        Mud Blazor
+                        <br />
+                        Sample Template
+                        <br />
+                        Created By Illegible
+                        <br />
                     </ChildContent>
                 </MudExpansionPanel>
             </MudExpansionPanels>
@@ -278,7 +289,12 @@
                         </div>
                     </TitleContent>
                     <ChildContent>
-                        Panel Content
+                        Mud Blazor
+                        <br />
+                        Sample Template
+                        <br />
+                        Created By Illegible
+                        <br />
                     </ChildContent>
                 </MudExpansionPanel>
             </MudExpansionPanels>
@@ -348,7 +364,12 @@
                         </div>
                     </TitleContent>
                     <ChildContent>
-                        Panel Content
+                        Mud Blazor
+                        <br />
+                        Sample Template
+                        <br />
+                        Created By Illegible
+                        <br />
                     </ChildContent>
                 </MudExpansionPanel>
             </MudExpansionPanels>
@@ -418,7 +439,12 @@
                         </div>
                     </TitleContent>
                     <ChildContent>
-                        Panel Content
+                        Mud Blazor
+                        <br />
+                        Sample Template
+                        <br />
+                        Created By Illegible
+                        <br />
                     </ChildContent>
                 </MudExpansionPanel>
             </MudExpansionPanels>
@@ -488,7 +514,12 @@
                         </div>
                     </TitleContent>
                     <ChildContent>
-                        Panel Content
+                        Mud Blazor
+                        <br />
+                        Sample Template
+                        <br />
+                        Created By Illegible
+                        <br />
                     </ChildContent>
                 </MudExpansionPanel>
             </MudExpansionPanels>
