--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/NavMenu.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/Shared/NavMenu.razor
@@ -1,15 +1,18 @@
 ﻿<PersonCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);" />
 <MudDivider Class="mb-4" />
 <MudNavMenu>
-    <MudText Typo="Typo.subtitle2" Color="Color.Secondary" Align="Align.Center" Class="ml-4 my-3">Personal</MudText>
     <MudNavLink Href="/personal/dashboard" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
     <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">Account</MudNavLink>
-
-    <MudText Typo="Typo.subtitle2"  Color="Color.Secondary" Align="Align.Center" Class="ml-4 my-3">Reports</MudText>
+    
+    <MudNavGroup Title="Reports" Icon="@Icons.Material.Outlined.Report" HideExpandIcon="true">
+        <MudNavLink Href="/basicReports" Icon="@Icons.Material.Outlined.StackedLineChart">Basic Reports</MudNavLink>
+        <MudNavLink Href="#" Icon="fas fa-file-excel">Excel Report</MudNavLink>
+        <MudNavLink Href="#" Icon="@Icons.Material.Outlined.DashboardCustomize">Stock Report</MudNavLink>
+    </MudNavGroup>
     <MudNavLink Href="application/email" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.Email">Email</MudNavLink>
     <MudNavLink Href="application/chat" Icon="@Icons.Material.Outlined.Forum">Chat</MudNavLink>
+    <MudNavLink Href="#" Icon="@Icons.Material.Outlined.SupportAgent">Support</MudNavLink>
 
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Pages</MudText>
     <MudNavGroup Title="Authentication" Icon="@Icons.Material.Outlined.AssignmentInd" HideExpandIcon="true">
         <MudNavLink Href="pages/authentication/login" Icon="@Icons.Material.Outlined.InsertDriveFile">Login</MudNavLink>
         <MudNavLink Href="pages/authentication/register" Icon="@Icons.Material.Outlined.InsertDriveFile">Register</MudNavLink>
@@ -20,7 +23,7 @@
         <MudNavLink Href="pages/error/404" Icon="@Icons.Material.Outlined.InsertDriveFile">404</MudNavLink>
         </MudNavGroup>*@
     <MudNavGroup Title="Utility" Icon="@Icons.Material.Outlined.Assignment" HideExpandIcon="false">
-        <MudNavLink Href="pages/utility/faq" Icon="@Icons.Filled.Settings">Setting</MudNavLink>
+        <MudNavLink Href="#" Icon="@Icons.Filled.Settings">Setting</MudNavLink>
         <MudNavLink Href="application/todo" Icon="@Icons.Custom.Uncategorized.AlertSuccess" Disabled="true">Todo</MudNavLink>
         <MudNavLink Href="application/users" Icon="@Icons.Material.Outlined.PeopleAlt" Disabled="true">Users</MudNavLink>
     </MudNavGroup>
