--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/_Imports.razor
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/_Imports.razor
@@ -9,3 +9,4 @@
 @using MudBlazor
 @using MudBlazorTemplateSamples
 @using MudBlazorTemplateSamples.Shared
+@using MudBlazorTemplateSamples.Pages.Reports.Charts
